fix: smooth scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1593,7 +1593,7 @@ body.price {
 }
 
 .pricing_promote {
-  padding: 5rem 0 4rem;
+  padding: 9rem 0 4rem;
 }
 .pricing_promote .subtitle {
   margin: 0 auto;
