--- a/scss/_tarifs.scss
+++ b/scss/_tarifs.scss
@@ -199,7 +199,7 @@ body.price {
 }
 
 .pricing_promote {
-    padding: 5rem 0 4rem;
+    padding: 9rem 0 4rem;
     .subtitle {
         margin: 0 auto;
         width: 75%;
